# file_reader

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
file_assets/: __init__.py  archive.py  auth.py  base.py  exceptions.py
file_assets/hosts/: ftp.py  hdfs.py  http.py  package.py  s3.py  sftp.py  smb.py  system.py
file_reader/: __init__.py  archive.py  base.py
file_reader/hosts/: __init__.py  archive.py  ftp.py  hdfs.py  http.py  local.py  package.py  s3.py  sftp.py  smb.py  system.py
tests/resources/: archive_content.tar
