[tool.poetry]
name = "file_reader"
version = "0.2.1"
description = "A tool for reading file from different sources with a single interface"
authors = ["Marc Rijken <marc@rijken.org>"]
license = "MIT"
repository = "https://github.com/mrijken/file_reader"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
boto3 = {version = "^1.16.0", optional = true}
smbprotocol = {version = "^1.2.0", optional = true}
paramiko = {version = "^2.7.2", optional = true}
requests = "^2.24.0"
pyarrow = {version = "^2.0.0", optional = true}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
pytest-cov = ">=2.10.1"
mypy = ">=0.790"
vulture = "^2.1"
isort = "^5.6.4"

[tool.poetry.extras]
s3 = ["boto3"]
smb = ["smbprotocol"]
sftp = ["paramiko"]
ssh = ["paramiko"]
hdfs = ["pyarrow"]
all = ["pyarrow", "paramiko", "smbprotocol", "boto3"]

[tool.black]
line_length = 120

[tool.pylint.format]
max-line-length = "120"

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["file_reader"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules --doctest-glob=\"*.md\""
testpaths = [
    "."
]

[tool.vulture]
exclude = [".eggs", ".git", ".*cache", ".tox"]
make_whitelist = true
min_confidence = 80
sort_by_size = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
