[tool.poetry]
name = "file_reader"
version = "0.2.3"
description = "A tool for reading file from different sources with a single interface"
authors = ["Marc Rijken <marc@rijken.org>"]
license = "MIT"
repository = "https://github.com/mrijken/file_reader"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6,<4.0"

[tool.poetry.dev-dependencies]
pytest-cov = ">=2.10.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules --doctest-glob=\"*.md\""
testpaths = ["."]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
